tests/toylang/neg/001310_mutation.toylang
program a = { var else : bool; } .
